--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -1,4 +1,4 @@
-// This SCSS file contains components which are used only once across the various pages.
+// This SCSS file contains components which are used only on index.html
 
 // INDEX HTML
 
@@ -142,5 +142,6 @@
     max-width: 75%;
     margin: 0 auto;
 }
+
 
 
