--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_base.scss";
-@import "_components.scss";
 @import "_layout.scss";
+@import "_index.scss";
+@import "_about.scss";
 
 // For comments on some of the thought processes behind the CSS, please look at main.css.
