--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,5 +2,24 @@
 
 {% block content %}
 
+<section id="about">
+
+    <div class="container-fluid about-wrapper">
+
+        <div class="about-banner">
+
+                <div class="col-12">
+                        <h4 class="header">About</h4>
+                    </div>
+
+
+        </div>
+
+    
+
+    </div>
+
+
+</section>
 
 {% endblock %}
