--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -6,7 +6,7 @@
 <div class="container-fluid navbar-container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
 
-        <a class="navLogo hvr-bounce-in" href="#"><img src="/static/img/logos/tandev_v1_brightlightblue.svg"
+        <a class="navLogo hvr-bounce-in" href="{{url_for('index')}}"><img src="/static/img/logos/tandev_v1_brightlightblue.svg"
                 class="img-fluid navLogo" alt="logo"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -25,7 +25,7 @@
             <ul class="navbar-nav ml-auto nav-fill w-50">
 
                 <li class="nav-item" id="navAbout">
-                    <a class="nav-link hvr-bounce-in" href="#" id="navAboutLink">About</a>
+                    <a class="nav-link hvr-bounce-in" href="{{url_for('about')}}" id="navAboutLink">About</a>
                 </li>
 
                 <li class="nav-item" id="navSearch">
