--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -1,8 +1,21 @@
 // This SCSS file contains components which are used only on about.html
 
+
 .about-banner {
-background: url("/static/img/hero.jpg") center top no-repeat scroll;
-background-position: contain;
-height: 100vh;
+
+    background: url("/static/img/hero-cropped.jpg") center top no-repeat scroll;
+    background-size: cover;
+    height: 50vh;
+
+
+    @media (min-width: $bp-ipadpro) {
+
+
+        background: url("/static/img/hero.jpg") center top no-repeat scroll;
+        background-position: contain;
+        height: 80vh;
+
+    }
+
 
 }
