--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,14 +8,18 @@
 
         <div class="about-banner">
 
-                <div class="col-12">
-                        <h4 class="header">About</h4>
-                    </div>
+            <div class="row"></div>
 
+            <div class="col-12 header-box d-flex justify-content-center align-items-center d-block">
+                <h4 class="header">About</h4>
+            </div>
 
         </div>
 
-    
+
+    </div>
+
+
 
     </div>
 
