--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,14 +4,16 @@
 
 <section id="about">
 
+    <div class="img-overlay-about">&nbsp;</div>
+
     <div class="container-fluid about-wrapper">
 
         <div class="about-banner">
 
             <div class="row"></div>
 
-            <div class="col-12 header-box d-flex justify-content-center align-items-center d-block">
-                <h4 class="header">About</h4>
+            <div class="col-12 page-header-box d-flex justify-content-center align-items-center d-block">
+                <h1 class="page-header">About</h1>
             </div>
 
         </div>
