--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,7 @@
 
 <section id="hero">
 
-    <div class="img-overlay">&nbsp;</div>
+    <div class="img-overlay-index">&nbsp;</div>
 
     <div class="container-fluid">
         <div class="row">
