--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,6 +71,93 @@ a {
   }
 }
 
+.page-header {
+  font-family: 'Montserrat', 700;
+  color: white;
+  text-shadow: 1em 1em 1em #0B132B;
+  text-transform: uppercase;
+}
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none !important;
+  color: black;
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+.navLogo {
+  height: 8vh;
+  width: 10vh;
+  margin-left: 2vw;
+}
+
+@media (min-width: 1024px) {
+  .navLogo {
+    width: 15vh;
+  }
+}
+
+.nav-link {
+  color: #0B132B !important;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    color: white !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    margin-right: 35%;
+  }
+}
+
+.nav-link.scrolled {
+  color: white !important;
+}
+
+.bg-light {
+  background-color: transparent !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light {
+    background-color: #0B132B !important;
+  }
+}
+
+.bg-light.scrolled {
+  background-color: #2581B0 !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light.scrolled {
+    background-color: #0B132B !important;
+  }
+}
+
+.page-header {
+  font-family: 'Montserrat', 700;
+  color: white;
+  text-shadow: 1em 1em 1em #0B132B;
+  text-transform: uppercase;
+}
+
 #hero {
   background: url("/static/img/puzzle-uncropped-xs.jpg") center center no-repeat;
   background-size: cover !important;
@@ -200,7 +287,7 @@ a {
   background-color: #2581B0;
 }
 
-.img-overlay {
+.img-overlay-index {
   position: absolute;
   top: 0;
   left: 0;
@@ -229,6 +316,86 @@ a {
   margin: 0 auto;
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none !important;
+  color: black;
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+.navLogo {
+  height: 8vh;
+  width: 10vh;
+  margin-left: 2vw;
+}
+
+@media (min-width: 1024px) {
+  .navLogo {
+    width: 15vh;
+  }
+}
+
+.nav-link {
+  color: #0B132B !important;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    color: white !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    margin-right: 35%;
+  }
+}
+
+.nav-link.scrolled {
+  color: white !important;
+}
+
+.bg-light {
+  background-color: transparent !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light {
+    background-color: #0B132B !important;
+  }
+}
+
+.bg-light.scrolled {
+  background-color: #2581B0 !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light.scrolled {
+    background-color: #0B132B !important;
+  }
+}
+
+.page-header {
+  font-family: 'Montserrat', 700;
+  color: white;
+  text-shadow: 1em 1em 1em #0B132B;
+  text-transform: uppercase;
+}
+
 .about-banner {
   background: url("/static/img/hero-cropped.jpg") center top no-repeat scroll;
   background-size: cover;
@@ -248,13 +415,22 @@ a {
   }
 }
 
-.header-box {
+.page-header-box {
   height: 50vh;
 }
 
 @media (min-width: 1024px) {
-  .header-box {
+  .page-header-box {
     height: 80vh;
   }
+}
+
+.img-overlay-about {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 /*# sourceMappingURL=main.css.map */
