finish styling page header

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -91,7 +91,7 @@ a {
 .page-header {
     font-family: 'Montserrat', 700;
     color: white;
-    text-shadow: 1em 1em 1em $darkblue;
+    text-shadow: 2em 1em $darkblue;
     text-transform: uppercase;
 
 }
