--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -38,3 +38,11 @@
     @include img-overlay;
     background-color: rgba(0, 0, 0, 0.3);
 }
+
+.about-text {
+    max-width: 75%;
+}
+
+#about-text {
+    background-color: rgba(0, 0, 0, 0.3);
+}
