--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -10,12 +10,12 @@
 
         <div class="about-banner">
 
-            <div class="row"></div>
+            <div class="row">
 
-            <div class="col-12 page-header-box d-flex justify-content-center align-items-center d-block">
-                <h1 class="page-header">About</h1>
+                <div class="col-12 page-header-box d-flex justify-content-center align-items-center d-block">
+                    <h1 class="page-header">About</h1>
+                </div>
             </div>
-
         </div>
 
 
@@ -23,8 +23,31 @@
 
 
 
-    </div>
 
+
+
+</section>
+
+<section id="about-text">
+
+    <div class="container-fluid about-text-wrapper">
+
+        <div class="col-12  justify-content-center">
+
+            <p class="about-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore eius sit tempore
+                dolorem adipisci fuga earum non laboriosam cupiditate! Quasi corporis, eligendi accusantium omnis ut
+                laboriosam. Id expedita delectus vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+                omnis alias laboriosam, velit placeat, atque tenetur animi optio sunt ipsam iste totam porro
+                consequuntur debitis perspiciatis, ipsum dolor quas magnam. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Omnis enim tenetur minus tempora at. Delectus tenetur veniam assumenda id eaque illum
+                qui fugit autem, error odio saepe numquam nihil asperiores? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Nisi voluptates corrupti reprehenderit excepturi expedita minima facilis et sequi
+                optio, enim eaque unde qui repellendus tempore ex? Laudantium ipsum laboriosam neque. Lorem ipsum, dolor
+                sit amet consectetur adipisicing elit. Doloribus eius molestiae exercitationem, magnam nam veniam ad
+                laboriosam eum alias? Quaerat pariatur perspiciatis exercitationem architecto maiores expedita aut qui
+                velit facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, labore assumenda fugit
+                numquam quasi ipsa neque corrupti harum reprehenderit sequi eaque tenetur quis magnam atque, adipisci
+                nostrum esse distinctio </p>
 
 </section>
 
