--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -35,8 +35,19 @@
 
 
 .img-overlay-about {
-    @include img-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+        
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.3);
+
+    height: 60.5vh;
+
+    @media (min-width: $bp-ipadpro) {
+        height: 80vh;
+    }
+
 }
 
 .about-text {
