--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -115,7 +115,11 @@
 }
 
 .img-overlay-index {
-    @include img-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
 }
 
