--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -32,22 +32,23 @@
 
     <div class="container-fluid about-text-wrapper">
 
-        <div class="col-12  justify-content-center">
+        <div class="col-12 d-flex justify-content-center about-text">
 
-            <p class="about-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore eius sit tempore
-                dolorem adipisci fuga earum non laboriosam cupiditate! Quasi corporis, eligendi accusantium omnis ut
-                laboriosam. Id expedita delectus vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
-                omnis alias laboriosam, velit placeat, atque tenetur animi optio sunt ipsam iste totam porro
-                consequuntur debitis perspiciatis, ipsum dolor quas magnam. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Omnis enim tenetur minus tempora at. Delectus tenetur veniam assumenda id eaque illum
-                qui fugit autem, error odio saepe numquam nihil asperiores? Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Nisi voluptates corrupti reprehenderit excepturi expedita minima facilis et sequi
-                optio, enim eaque unde qui repellendus tempore ex? Laudantium ipsum laboriosam neque. Lorem ipsum, dolor
-                sit amet consectetur adipisicing elit. Doloribus eius molestiae exercitationem, magnam nam veniam ad
-                laboriosam eum alias? Quaerat pariatur perspiciatis exercitationem architecto maiores expedita aut qui
-                velit facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, labore assumenda fugit
-                numquam quasi ipsa neque corrupti harum reprehenderit sequi eaque tenetur quis magnam atque, adipisci
-                nostrum esse distinctio </p>
+            <p>What do you think when you hear the word 'tandem'? </p>
+            <p>You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
+                bicycle together.</p>
+            <p>You might also think of the more modern definition when two learners of foreign languages come together
+                to practice and help each other</p>
+            <p> Here at tanDev, we took the core concept of tandem as a <strong>combined effort</strong> and
+                <strong>skill exchange</strong> to help connect developers and designers who want to both teach and
+                learn from others.</p>
+            <p>Know Python, but bad with design?</p>
+            <p>Or maybe an old-school dev with masterful PHP skills but no idea of all these newfangled languages?</p>
+            <p>Create a profile and search for other people with the skills you desire to get started exchanging your skills now! Once connected, it's up to you to figure out a tandem that works best for you, be that over text, voice or in person.*</p>
+            <p><small>* tanDev's zipcode search currently only works for Berlin.</small></p>
+
+
+            </p>
 
 </section>
 
