--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -51,9 +51,15 @@
 }
 
 .about-text {
-    max-width: 75%;
+    max-width: 70%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.25em;
+}
+
+.about-text-wrapper {
+    padding-top: 5vh;
 }
 
 #about-text {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: white;
 }
