create footer skeleton

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -30,22 +30,22 @@
 
 <section id="about-text">
 
-    <div class="container-fluid about-text-wrapper">
+    <div class="container-fluid about-text-wrapper text-center">
 
-        <div class="col-12 d-flex justify-content-center about-text">
+        <div class="col-12 d-flex about-text">
 
-            <p>What do you think when you hear the word 'tandem'? </p>
-            <p>You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
-                bicycle together.</p>
-            <p>You might also think of the more modern definition when two learners of foreign languages come together
-                to practice and help each other</p>
-            <p> Here at tanDev, we took the core concept of tandem as a <strong>combined effort</strong> and
+            <p>What do you think when you hear the word 'tandem'? </br>
+            You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
+                bicycle together.</br>
+            You might also think of the more modern definition when two learners of foreign languages come together
+                to practice and help each other</br>
+             Here at tanDev, we took the core concept of tandem as a <strong>combined effort</strong> and
                 <strong>skill exchange</strong> to help connect developers and designers who want to both teach and
-                learn from others.</p>
-            <p>Know Python, but bad with design?</p>
-            <p>Or maybe an old-school dev with masterful PHP skills but no idea of all these newfangled languages?</p>
-            <p>Create a profile and search for other people with the skills you desire to get started exchanging your skills now! Once connected, it's up to you to figure out a tandem that works best for you, be that over text, voice or in person.*</p>
-            <p><small>* tanDev's zipcode search currently only works for Berlin.</small></p>
+                learn from others.</br>
+            Know Python, but bad with design?</br>
+            Or maybe an old-school dev with masterful PHP skills but no idea of all these newfangled languages?</br>
+            Create a profile and search for other people with the skills you desire to get started exchanging your skills now! Once connected, it's up to you to figure out a tandem that works best for you, be that over text, voice or in person.*</br>
+            <small>* tanDev's zipcode search currently only works for Berlin.</small></br>
 
 
             </p>
