--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -32,7 +32,7 @@
 
     <div class="container-fluid about-text-wrapper text-center">
 
-        <div class="col-12 d-flex about-text">
+        <div class="col-12 d-flex justify-content-center about-text">
 
             <p>What do you think when you hear the word 'tandem'? </br>
             You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
