make footer presentable

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,8 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -76,11 +78,37 @@ a {
   color: white;
   text-shadow: 1em 0.5em #0B132B;
   text-transform: uppercase;
+}
+
+footer {
+  height: 15vh;
+  background-color: #0B132B;
+  position: bottom fixed;
+  color: #2581B0;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center !important;
+}
+
+footer-container {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+col-4 {
+  margin-left: 4vh;
+}
+
+ul {
+  margin: 0;
 }
 
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -156,6 +184,30 @@ a {
   color: white;
   text-shadow: 1em 0.5em #0B132B;
   text-transform: uppercase;
+}
+
+footer {
+  height: 15vh;
+  background-color: #0B132B;
+  position: bottom fixed;
+  color: #2581B0;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center !important;
+}
+
+footer-container {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+col-4 {
+  margin-left: 4vh;
+}
+
+ul {
+  margin: 0;
 }
 
 #hero {
@@ -319,6 +371,8 @@ a {
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -396,6 +450,30 @@ a {
   text-transform: uppercase;
 }
 
+footer {
+  height: 15vh;
+  background-color: #0B132B;
+  position: bottom fixed;
+  color: #2581B0;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center !important;
+}
+
+footer-container {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+col-4 {
+  margin-left: 4vh;
+}
+
+ul {
+  margin: 0;
+}
+
 .about-banner {
   background: url("/static/img/hero-cropped.jpg") center top no-repeat scroll;
   background-size: cover;
@@ -441,13 +519,20 @@ a {
 }
 
 .about-text {
-  max-width: 70%;
+  max-width: 65%;
   font-family: 'Roboto', sans-serif;
   font-size: 1.25em;
+  margin: 0 auto;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
 .about-text-wrapper {
   padding-top: 5vh;
+}
+
+.footer-p {
+  margin: 0;
 }
 
 #about-text {
