--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,11 +1,11 @@
 {% block footer %}
 <!-- column sizes in footer different on activities page because of filters bar on right making the width of the footer smaller -->
 <footer>
-    <div class="container">
+    <div class="container-fluid footer-container">
         <div class="row">
             <div class="col-4">
-                <h3>Contact</h3>
-                <p>
+                <h4>Contact</h4>
+                <p class="footer-p">
 
                     <i class="fas fa-at"></i> contact@tandev.com
 
@@ -13,17 +13,17 @@
 
             </div>
             <div class="col-4">
-                <h3>Created by</h3>
+                <h4>Created by</h4>
 
-                <p>
+                <p class="footer-p">
                     <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo"></i></a>
                 </p>
             </div>
 
             <div class="col-4">
-                <h3>Stay connected</h3>
+                <h4>Stay connected</h4>
 
-                <p>
+                <p class="footer-p">
 
                     <ul class="list-inline social-links">
                         <li class="list-inline-item ">
