--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -42,7 +42,10 @@
 
     {% block content %} {% endblock %}
 
+    <!-- Add footer -->
 
+    {% include 'layouts/footer.html' %}
+    
     <!-- Scripts -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
@@ -69,7 +72,7 @@
 
     {% endif %}
 
-    {% include 'layouts/footer.html' %}
+
 </body>
 
 </html>
