--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -22,33 +22,103 @@
     </div>
 
 
-
-
-
-
 </section>
 
 <section id="about-text">
 
+
+    <div class="col-12">
+
+        <h3 class="heading text-center">Our Mission
+        </h3>
+
+        <div class="heading-ul"></div>
+    </div>
+
+
     <div class="container-fluid about-text-wrapper text-center">
 
-        <div class="col-12 d-flex justify-content-center about-text">
+        <div class="col-12 d-flex about-text">
 
             <p>What do you think when you hear the word 'tandem'? </br>
-            You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
+                You might think of the tandem bicycle, popular in the 19th century, which allowed two people to ride a
                 bicycle together.</br>
-            You might also think of the more modern definition when two learners of foreign languages come together
+                You might also think of the more modern definition when two learners of foreign languages come together
                 to practice and help each other</br>
-             Here at tanDev, we took the core concept of tandem as a <strong>combined effort</strong> and
+                Here at tanDev, we took the core concept of tandem as a <strong>combined effort</strong> and
                 <strong>skill exchange</strong> to help connect developers and designers who want to both teach and
                 learn from others.</br>
-            Know Python, but bad with design?</br>
-            Or maybe an old-school dev with masterful PHP skills but no idea of all these newfangled languages?</br>
-            Create a profile and search for other people with the skills you desire to get started exchanging your skills now! Once connected, it's up to you to figure out a tandem that works best for you, be that over text, voice or in person.*</br>
-            <small>* tanDev's zipcode search currently only works for Berlin.</small></br>
+                Know Python, but bad with design?</br>
+                Or maybe an old-school dev with masterful PHP skills but no idea of all these newfangled languages?</br>
+                Create a profile and search for other people with the skills you desire to get started exchanging your
+                skills now! Once connected, it's up to you to figure out a tandem that works best for you, be that over
+                text, voice or in person.*</br>
+                <small>* tanDev's zipcode search currently only works for Berlin.</small></br>
 
 
             </p>
+
+</section>
+
+<section id="features">
+
+    <!-- Code for the Features section was inspired by the following YouTube video: https://www.youtube.com/watch?v=V_lAhqLXT9A -->
+
+
+    <!-- Start Jumbotron -->
+    <div class="jumbotron">
+
+        <div class="features">
+            <div class="col-12">
+
+                <h3 class="heading text-center">Features
+                </h3>
+
+                <div class="heading-ul"></div>
+            </div>
+
+
+            <div class="row text-center">
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fas fa-search fa-3x" data-fa-transform="shrink-3 up-5"></i>
+                        <h3>Find</h3>
+                        <p>Find other developers and designer in your area or farther away. tanDev offers many filters
+                            by
+                            which you can search for your perfect tandem partner, such as their skill set, location, and
+                            preferred communication style.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fas fa-user-edit fa-3x" data-fa-transform="shrink-3 up-5"></i>
+                        <h3>Match</h3>
+                        <p>Create an account at tanDev and make it easy for others to find you. State your skills and
+                            preferences, and post them for our members to see. Your skill level or preferences changed?
+                            No
+                            problem; you can edit your profile at any time.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fas fa-laptop-code fa-3x" data-fa-transform="shrink-3 up-5"></i>
+                        <h3>Connect</h3>
+                        <p>Found your perfect match, or perhaps -- we are modern, after all -- several of them? Add them
+                            to
+                            your favorites list, and send them a message at your own convenience.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <!-- End Jumbotron -->
+
 
 </section>
 
