--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -82,8 +82,8 @@
 
                 <div class="col-md-4">
                     <div class="feature">
-                        <i class="fas fa-search fa-3x" data-fa-transform="shrink-3 up-5"></i>
-                        <h3>Find</h3>
+                        <i class="fas fa-search fa-3x feature-icon" data-fa-transform="shrink-3 up-5"></i>
+                        <h3 class="feature-header">Find</h3>
                         <p>Find other developers and designer in your area or farther away. tanDev offers many filters
                             by
                             which you can search for your perfect tandem partner, such as their skill set, location, and
@@ -93,8 +93,8 @@
 
                 <div class="col-md-4">
                     <div class="feature">
-                        <i class="fas fa-user-edit fa-3x" data-fa-transform="shrink-3 up-5"></i>
-                        <h3>Match</h3>
+                        <i class="fas fa-user-edit fa-3x feature-icon" data-fa-transform="shrink-3 up-5"></i>
+                        <h3 class="feature-header">Match</h3>
                         <p>Create an account at tanDev and make it easy for others to find you. State your skills and
                             preferences, and post them for our members to see. Your skill level or preferences changed?
                             No
@@ -104,8 +104,8 @@
 
                 <div class="col-md-4">
                     <div class="feature">
-                        <i class="fas fa-laptop-code fa-3x" data-fa-transform="shrink-3 up-5"></i>
-                        <h3>Connect</h3>
+                        <i class="fas fa-laptop-code fa-3x feature-icon" data-fa-transform="shrink-3 up-5"></i>
+                        <h3 class="feature-header">Connect</h3>
                         <p>Found your perfect match, or perhaps -- we are modern, after all -- several of them? Add them
                             to
                             your favorites list, and send them a message at your own convenience.</p>
