--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -99,3 +99,11 @@ text-transform: uppercase;
     border-radius: 0;
 }
 
+.feature-icon {
+    margin: 3vh;
+}
+
+.feature-header {
+    margin-bottom: 2rem;
+    color: $teal;
+}
