add heading styling

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,7 +44,10 @@
         <!-- The carousel on the index page, which cycles through a total of 6 random profiles in slides of two Bootstrap each. -->
 
         <div class="col-12">
-            <h4 class="header">See our users</h4>
+            <h3 class="heading text-center">See our users
+            </h3>
+
+            <div class="heading-ul"></div>
         </div>
 
         {% for profile in carousel %}
