--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -92,6 +92,23 @@ a {
 
 }
 
+h3.heading {
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    font-size: 1.9rem;
+    font-family: 700;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+}
+
+.heading-ul {
+    width: 3rem;
+    height: 0.2rem;
+    background-color: $brightmidblue;
+    margin: 0 auto 8vh;
+
+}
+
 // Footer
 
 footer {
