add fade up animations

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
 
@@ -45,13 +46,15 @@
     <!-- Add footer -->
 
     {% include 'layouts/footer.html' %}
-    
+
     <!-- Scripts -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- Common script which loads JavaScript applicabe to all pages -->
 
